@@ -1,3 +1,7 @@
+2007-11-25  David Wetzel <dave@turbocat.de>
+	* GSWAdaptors/Apache2/mod_gsw.c
+	Works also if a header or empty line at the end of the headers has a \r\n ending.
+
 2007-11-24  David Ayers  <ayers@fsfe.org>
 
 	* GSWeb.framework/GSWApplication+Defaults.m
